--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@vitejs/plugin-vue": "^4.3.1",
     "gh-pages": "^6.0.0",
     "pinia": "^2.1.6",
-    "primevue": "^3.34.1",
+    "tailwindcss": "^3.3.3",
+    "tw-elements": "^1.0.0",
     "vite": "^4.4.9",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
@@ -31,7 +32,7 @@
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
     "prettier-eslint": "^15.0.1",
-    "tailwindcss": "^3.3.3"
+    "sass": "^1.66.1"
   },
   "description": "This template should help get you started developing with Vue 3 in Vite.",
   "main": "vite.config.js",
