--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_API=https://vue3-course-api.hexschool.io/
-VUE_APP_PATH=yu-api
+VITE_APP_API=https://vue3-course-api.hexschool.io
+VITE_APP_PATH=yu-api
