--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
     "@vitejs/plugin-vue": "^4.3.1",
+    "axios": "^1.5.0",
     "gh-pages": "^6.0.0",
     "pinia": "^2.1.6",
     "tailwindcss": "^3.3.3",
     "tw-elements": "^1.0.0",
     "vite": "^4.4.9",
     "vue": "^3.3.4",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
