--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vite": "^4.4.9",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-loading-overlay": "^0.0.0"
   },
   "devDependencies": {
     "@vue/eslint-config-prettier": "^8.0.0",
