--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
+    "@vee-validate/i18n": "^4.11.7",
+    "@vee-validate/rules": "^4.11.7",
     "@vitejs/plugin-vue": "^4.3.1",
     "axios": "^1.5.0",
     "gh-pages": "^6.0.0",
     "pinia": "^2.1.6",
     "tailwindcss": "^3.3.3",
     "tw-elements": "^1.0.0",
+    "vee-validate": "^4.11.7",
     "vite": "^4.4.9",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
