--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^39.0.2",
+    "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@rushstack/eslint-patch": "^1.3.2",
     "@vee-validate/i18n": "^4.11.7",
     "@vee-validate/rules": "^4.11.7",
