--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.5.0",
     "gh-pages": "^6.0.0",
     "pinia": "^2.1.6",
+    "sweetalert2": "^11.7.31",
     "tailwindcss": "^3.3.3",
     "tw-elements": "^1.0.0",
     "vee-validate": "^4.11.7",
@@ -27,6 +28,7 @@
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.4",
+    "vue-sweetalert2": "^5.0.5",
     "vue3-loading-overlay": "^0.0.0"
   },
   "devDependencies": {
