--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@vee-validate/i18n": "^4.11.7",
     "@vee-validate/rules": "^4.11.7",
     "@vitejs/plugin-vue": "^4.3.1",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.5.0",
     "gh-pages": "^6.0.0",
     "pinia": "^2.1.6",
-    "sweetalert2": "^11.7.31",
+    "sweetalert2": "^11.6.13",
     "swiper": "^10.3.1",
     "tailwindcss": "^3.3.3",
     "tw-elements": "^1.0.0",
