--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^39.0.2",
     "@ckeditor/ckeditor5-vue": "^5.1.0",
-    "@rushstack/eslint-patch": "^1.3.2",
     "@vee-validate/i18n": "^4.11.7",
     "@vee-validate/rules": "^4.11.7",
     "@vitejs/plugin-vue": "^4.3.1",
+    "@vue/eslint-config-airbnb": "^8.0.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.5.0",
     "gh-pages": "^6.0.0",
@@ -34,11 +34,12 @@
     "vue3-loading-overlay": "^0.0.0"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.10.3",
     "@vue/eslint-config-prettier": "^8.0.0",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.49.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.29",
