--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "vite": "^4.4.9",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
+    "vue-loading-overlay": "^6.0.4",
     "vue-router": "^4.2.4",
-    "vue-sweetalert2": "^5.0.5",
-    "vue3-loading-overlay": "^0.0.0"
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.10.3",
