chore: Prettier 加入 TailwindCSS 排序插件和調整設定

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -9,6 +9,10 @@
   "jsxSingleQuote": false,
   "arrowParens": "always",
   "proseWrap": "never",
-  "htmlWhitespaceSensitivity": "strict",
-  "endOfLine": "lf"
+  "htmlWhitespaceSensitivity": "ignore",
+  "bracketSameLine": true,
+  "endOfLine": "lf",
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
